en/v2026.9.0/_sources/autoapi/pudl/glue/ferc1_eia/index.rst.txt
pudl.glue.ferc1_eia
===================

.. py:module:: pudl.glue.ferc1_eia

.. autoapi-nested-parse::

   Extract and transform glue tables between FERC Form 1 and EIA 860/923.

   FERC1 and EIA report on many of the same plants and utilities, but have no embedded
   connection. We have combed through the FERC and EIA plants and utilities to generate
   id's which can connect these datasets. The resulting fields in the PUDL tables are
   ``plant_id_pudl`` and ``utility_id_pudl``, respectively. This was done by hand in a
   spreadsheet which is in the ``package_data/glue`` directory. When mapping plants, we
   considered a plant a co-located collection of electricity generation equipment. If a
   coal plant was converted to a natural gas unit, our aim was to consider this the same
   plant.  This module simply reads in the mapping spreadsheet and converts it to a
   dictionary of dataframes.

   Because these mappings were done by hand and for every one of FERC Form 1's thousands of
   reported plants, we know there are probably some incorrect or incomplete mappings. If
   you see a ``plant_id_pudl`` or ``utility_id_pudl`` mapping that you think is incorrect,
   please open an issue on our Github!

   Note that the PUDL IDs may change over time. They are not guaranteed to be stable. If
   you need to find a particular plant or utility reliably, you should use its
   ``plant_id_eia``, ``utility_id_eia``, or ``utility_id_ferc1``.

   Another note about these id's: these id's map our definition of plants, which is not the
   most granular level of plant unit. The generators are typically the smaller, more
   interesting unit. FERC does not typically report in units (although it sometimes does),
   but it does often break up gas units from coal units. EIA reports on the generator and
   boiler level. When trying to use these PUDL id's, consider the granularity that you
   desire and the potential implications of using a co-located set of plant infrastructure
   as an id.



Attributes
----------

.. autoapisummary::

   pudl.glue.ferc1_eia.logger
   pudl.glue.ferc1_eia.PUDL_ID_MAP_XLSX
   pudl.glue.ferc1_eia.UTIL_ID_PUDL_MAP_CSV
   pudl.glue.ferc1_eia.UTIL_ID_FERC_MAP_CSV
   pudl.glue.ferc1_eia.MIN_PLANT_CAPACITY_MW
   pudl.glue.ferc1_eia.MAX_LOST_PLANTS_EIA
   pudl.glue.ferc1_eia.MAX_LOST_UTILS_EIA


Classes
-------

.. autoapisummary::

   pudl.glue.ferc1_eia.GenericPlantFerc1TableTransformer


Functions
---------

.. autoapisummary::

   pudl.glue.ferc1_eia.get_plant_map
   pudl.glue.ferc1_eia.get_utility_map_pudl
   pudl.glue.ferc1_eia.get_utility_map_ferc1
   pudl.glue.ferc1_eia.get_mapped_plants_eia
   pudl.glue.ferc1_eia.get_util_ids_ferc1_raw_xbrl
   pudl.glue.ferc1_eia.get_util_ids_ferc1_raw_dbf
   pudl.glue.ferc1_eia.get_plants_ferc1_raw_job
   pudl.glue.ferc1_eia.get_missing_ids
   pudl.glue.ferc1_eia.label_missing_ids_for_manual_mapping
   pudl.glue.ferc1_eia.label_plants_eia
   pudl.glue.ferc1_eia.label_utilities_ferc1_dbf
   pudl.glue.ferc1_eia.label_utilities_ferc1_xbrl
   pudl.glue.ferc1_eia.get_utility_most_recent_capacity
   pudl.glue.ferc1_eia.get_core_eia923_plant_ids
   pudl.glue.ferc1_eia.get_util_ids_eia_unmapped
   pudl.glue.ferc1_eia.glue


Module Contents
---------------

.. py:data:: logger

.. py:data:: PUDL_ID_MAP_XLSX

   Path to the PUDL ID mapping sheet with the plant map.

.. py:data:: UTIL_ID_PUDL_MAP_CSV

   Path to the PUDL utility ID mapping CSV.

.. py:data:: UTIL_ID_FERC_MAP_CSV

   Path to the PUDL-assign FERC1 utility ID mapping CSV.

.. py:data:: MIN_PLANT_CAPACITY_MW
   :type:  float
   :value: 5.0


.. py:data:: MAX_LOST_PLANTS_EIA
   :type:  int
   :value: 50


.. py:data:: MAX_LOST_UTILS_EIA
   :type:  int
   :value: 10


.. py:function:: get_plant_map() -> pandas.DataFrame

   Read in the manual FERC to EIA plant mapping data.


.. py:function:: get_utility_map_pudl() -> pandas.DataFrame

   Read in the manual FERC to EIA utility mapping data.


.. py:function:: get_utility_map_ferc1() -> pandas.DataFrame

   Read in the manual XBRL to DBF FERC1 utility mapping data.


.. py:function:: get_mapped_plants_eia() -> pandas.DataFrame

   Get a list of all EIA plants that have been assigned PUDL Plant IDs.

   Read in the list of already mapped EIA plants from the FERC 1 / EIA plant
   and utility mapping spreadsheet kept in the package_data.

   :returns: A DataFrame listing the plant_id_eia and plant_name_eia values for every EIA
             plant which has already been assigned a PUDL Plant ID.


.. py:function:: get_util_ids_ferc1_raw_xbrl(ferc1_engine_xbrl: sqlalchemy.Engine) -> pandas.DataFrame

   Grab the utility ids (reported as `entity_id`) in the FERC1 XBRL database.


.. py:function:: get_util_ids_ferc1_raw_dbf(ferc1_engine_dbf: sqlalchemy.Engine) -> pandas.DataFrame

   Grab the utility ids (reported as `respondent_id`) in the FERC1 DBF database.


.. py:class:: GenericPlantFerc1TableTransformer(table_id: pudl.transform.ferc1.TableIdFerc1, **kwargs)

   Bases: :py:obj:`pudl.transform.ferc1.Ferc1AbstractTableTransformer`


   Generic plant table transformer.

   Intended for use in compiling all plant names for manual ID mapping.


   .. py:attribute:: table_id

      Name of the PUDL database table that this table transformer produces.

      Must be defined in the database schema / metadata. This ID is used to instantiate
      the appropriate :class:`TableTransformParams` object.


   .. py:method:: transform(raw_dbf_dfs: dict[str, pandas.DataFrame], raw_xbrl_dfs: dict[str, pandas.DataFrame]) -> pandas.DataFrame

      Only apply the generic :meth:``transform_start``.



   .. py:method:: transform_main(df: pandas.DataFrame) -> pandas.DataFrame

      Basic name normalization and dropping of invalid rows.



   .. py:method:: drop_invalid_rows(df: pandas.DataFrame, params: list[pudl.transform.classes.InvalidRows] | None = None) -> pandas.DataFrame

      Add required valid columns before running standard drop_invalid_rows.

      This parent classes' method drops the whole df if all of the
      ``require_valid_columns`` don't exist in the df. For the glue tests only, we add
      in empty required columns because we know that the real ETL adds columns during
      the full transform step.



.. py:function:: get_plants_ferc1_raw_job() -> dagster.JobDefinition

   Pull all plants in the FERC Form 1 DBF and XBRL DB for given years.

   This job expects ferc1_dbf.sqlite and ferc_xbrl.sqlite databases to be populated.


.. py:function:: get_missing_ids(ids_left: pandas.DataFrame, ids_right: pandas.DataFrame, id_cols: list[str]) -> pandas.Index

   Identify IDs that are missing from the left df but show up in the right df.

   :param ids_left: table which contains ``id_cols`` to be used as left table in join.
   :param ids_right: table which contains ``id_cols`` to be used as left table in join.
   :param id_cols: list of ID column(s)

   :returns: index of unique values in ``id_cols`` that exist in ``ids_right`` but not
             ``ids_left``.


.. py:function:: label_missing_ids_for_manual_mapping(missing_ids: pandas.Index, label_df: pandas.DataFrame) -> pandas.DataFrame

   Label unmapped IDs for manual mapping.


.. py:function:: label_plants_eia(out_eia__yearly_plants: pandas.DataFrame, out_eia__yearly_generators: pandas.DataFrame) -> pandas.DataFrame

   Label plants with columns helpful in manual mapping.


.. py:function:: label_utilities_ferc1_dbf(core_pudl__assn_ferc1_dbf_pudl_utilities: pandas.DataFrame, util_ids_ferc1_raw_dbf: pandas.DataFrame) -> pandas.DataFrame

   Get the DBF FERC1 utilities with their names.


.. py:function:: label_utilities_ferc1_xbrl(core_pudl__assn_ferc1_xbrl_pudl_utilities: pandas.DataFrame, util_ids_ferc1_raw_xbrl: pandas.DataFrame) -> pandas.DataFrame

   Get the XBRL FERC1 utilities with their names.


.. py:function:: get_utility_most_recent_capacity() -> pandas.DataFrame

   Calculate total generation capacity by utility in most recent reported year.


.. py:function:: get_core_eia923_plant_ids()

   Compile Plant IDs for all plants that appear in core EIA-923 tables.


.. py:function:: get_util_ids_eia_unmapped(out_eia__yearly_utilities: pandas.DataFrame, out_eia__yearly_generators: pandas.DataFrame, utilities_eia_mapped: pandas.DataFrame) -> pandas.DataFrame

   Get a list of all the EIA Utilities in the PUDL DB without PUDL IDs.

   Identify any EIA Utility that appears in the data but does not have a
   utility_id_pudl associated with it in our ID mapping spreadsheet. Label some of
   those utilities for potential linkage to FERC 1 utilities, but only if they have
   plants which report data somewhere in the EIA-923 data tables. For those utilities
   that do have plants reporting in EIA-923, sum up the total capacity of all of their
   plants and include that in the output dataframe so that we can effectively
   prioritize mapping them.


.. py:function:: glue(ferc1: bool = False, eia: bool = False)

   Generates a dictionary of dataframes for glue tables between FERC1, EIA.

   That data is primarily stored in the plant_output and
   utility_output tabs of package_data/glue/pudl_id_mapping.xlsx in the
   repository. There are a total of seven relations described in this data:

       - utilities: Unique id and name for each utility for use across the
         PUDL DB.
       - plants: Unique id and name for each plant for use across the PUDL DB.
       - core_pudl__assn_eia_pudl_utilities: EIA operator ids and names attached to a PUDL
         utility id.
       - core_pudl__assn_eia_pudl_plants: EIA plant ids and names attached to a PUDL plant id.
       - utilities_ferc: FERC respondent ids & names attached to a PUDL
         utility id.
       - plants_ferc: A combination of FERC plant names and respondent ids,
         associated with a PUDL plant ID. This is necessary because FERC does
         not provide plant ids, so the unique plant identifier is a
         combination of the respondent id and plant name.
       - core_pudl__assn_utilities_plants: An association table which describes which plants
         have relationships with what utilities. If a record exists in this
         table then combination of PUDL utility id & PUDL plant id does have
         an association of some kind. The nature of that association is
         somewhat fluid, and more scrutiny will likely be required for use in
         analysis.

   Presently, the 'glue' tables are a very basic piece of infrastructure for
   the PUDL DB, because they contain the primary key fields for utilities and
   plants in FERC1.

   :param ferc1: Are we ingesting FERC Form 1 data?
   :param eia: Are we ingesting EIA data?

   :returns: A dictionary of glue table DataFrames.


